pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__snapshot_shared_artifact_multiple_machines_different_generators.snap
---
source: tests/config/make_tests.rs
assertion_line: 148
expression: "make_snapshot!(input, config)"
---
Input:
{
    "nixos": [
        {
            "machine": "machine-one",
            "artifacts": {
                "shared-secret": {
                    "name": "shared-secret",
                    "shared": true,
                    "files": {},
                    "prompts": {},
                    "generator": "/nix/store/gen-a.sh",
                    "backend": "test"
                }
            },
            "config": {}
        },
        {
            "machine": "machine-two",
            "artifacts": {
                "shared-secret": {
                    "name": "shared-secret",
                    "shared": true,
                    "files": {},
                    "prompts": {},
                    "generator": "/nix/store/gen-b.sh",
                    "backend": "test"
                }
            },
            "config": {}
        }
    ],
    "home": []
}

Parsed:
MakeConfiguration {
    nixos_map: {
        "machine-one": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: None,
                shared: true,
                files: {},
                prompts: {},
                generator: "/nix/store/gen-a.sh",
                backend: "test",
            },
        },
        "machine-two": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: None,
                shared: true,
                files: {},
                prompts: {},
                generator: "/nix/store/gen-b.sh",
                backend: "test",
            },
        },
    },
    home_map: {},
    nixos_config: {},
    home_config: {},
    make_base: "",
    make_json: "make.json",
}
