pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__snapshot_shared_artifact_with_description.snap
---
source: tests/config/make_tests.rs
assertion_line: 444
expression: "make_snapshot!(input, config)"
---
Input:
{
    "nixos": [
        {
            "machine": "machine-one",
            "artifacts": {
                "shared-secret": {
                    "name": "shared-secret",
                    "description": "Shared SSH key for all servers",
                    "shared": true,
                    "files": {},
                    "prompts": {},
                    "generator": "/nix/store/gen.sh",
                    "backend": "test"
                }
            },
            "config": {}
        },
        {
            "machine": "machine-two",
            "artifacts": {
                "shared-secret": {
                    "name": "shared-secret",
                    "description": "Shared SSH key for all servers",
                    "shared": true,
                    "files": {},
                    "prompts": {},
                    "generator": "/nix/store/gen.sh",
                    "backend": "test"
                }
            },
            "config": {}
        }
    ],
    "home": []
}

Parsed:
MakeConfiguration {
    nixos_map: {
        "machine-one": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: Some(
                    "Shared SSH key for all servers",
                ),
                shared: true,
                files: {},
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
        "machine-two": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: Some(
                    "Shared SSH key for all servers",
                ),
                shared: true,
                files: {},
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
    },
    home_map: {},
    nixos_config: {},
    home_config: {},
    make_base: "",
    make_json: "make.json",
}
