pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__snapshot_single_nixos_artifact_no_shared.snap
---
source: tests/config/make_tests.rs
assertion_line: 44
expression: "make_snapshot!(input, config)"
---
Input:
{
    "nixos": [{
        "machine": "machine-one",
        "artifacts": {
            "my-secret": {
                "name": "my-secret",
                "shared": false,
                "files": {},
                "prompts": {},
                "generator": "/nix/store/gen.sh",
                "backend": "test"
            }
        },
        "config": {}
    }],
    "home": []
}

Parsed:
MakeConfiguration {
    nixos_map: {
        "machine-one": {
            "my-secret": ArtifactDef {
                name: "my-secret",
                description: None,
                shared: false,
                files: {},
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
    },
    home_map: {},
    nixos_config: {},
    home_config: {},
    make_base: "",
    make_json: "make.json",
}
